# glass-easel-analyzer

./: .eslintrc.js  .gitignore  .gitmodules  .npmrc  CHANGELOG.md  Cargo.toml  README.md  backend-configuration-sample.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish-version.js  tsconfig.json
.github/workflows/: npm-test.yml  vscode-extension.yml
backend-configuration/: sample.toml
backend-configuration/web/: README.md  extract.ts  package.json  tsconfig.json  web.toml
src/: color.rs  completion.rs  file.rs  folding.rs  formatting.rs  hover.rs  lib.rs  logger.rs  main.rs  reference.rs  semantic.rs  symbol.rs  utils.rs  wxml_ts.rs  wxml_utils.rs  wxss_utils.rs
src/context/: backend_configuration.rs  mod.rs  project.rs  utils.rs
src/reference/: mod.rs  wxml.rs  wxss.rs
src/semantic/: mod.rs  wxml.rs  wxss.rs
src/wxs/: mod.rs
src/wxss/: font_face.rs  import.rs  key_frame.rs  keyframe.rs  media.rs  mod.rs  property.rs  rule.rs  token.rs
ts-server-bundled/: package.json
vscode-extension/: .gitignore  .vscode-test.mjs  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js  wxml-language-configuration.json  wxss-language-configuration.json
vscode-extension/src/: client.ts  extension.ts  middleware.ts  typescript.ts  utils.ts
vscode-extension/src/test/: color.test.ts  completion.test.ts  diagnostic.test.ts  env.ts  folding.test.ts  hover.test.ts  reference.test.ts  semantic.test.ts  symbol.test.ts
vscode-extension/test-fixture/: app.json  tsconfig.json
vscode-extension/test-fixture/ts/: basic.json  basic.ts  basic.wxml  comp.ts  global-using.json  global-using.ts  global-using.wxml  non-export.ts  non-export.wxml  page.json  page.ts  page.wxml  scope.ts  scope.wxml  special.ts  special.wxml
vscode-extension/test-fixture/wxml/: attribute.wxml  comment.wxml  component.json  component.wxml  core-attribute.json  core-attribute.wxml  core-attribute.wxss  event-binding.wxml  global.wxml  global.wxs  global2.wxml  import.wxml  let-var.wxml  meta-tag.wxml  slot-value.json  slot-value.wxml  special.wxml  static-class.wxml  static-class.wxss  static-property.wxml  template.wxml  wx-for.wxml  wxs.wxml  (+2 more)
(+162 files in other folders)
