[package]
name = "glass-easel-analyzer"
version = "0.1.0"
edition = "2021"

[lib]
types = ["rlib"]

[[bin]]
name = "glass-easel-analyzer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
futures = "0.3.31"
glass-easel-template-compiler = "0.10.3"
log = "0.4.22"
lsp-server = "0.7.7"
lsp-types = "0.97.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["fs", "macros", "rt", "sync"] }
