[package]
name = "glass-easel-analyzer"
version = "0.1.0"
edition = "2021"

[lib]
type = ["rlib"]

[[bin]]
name = "glass-easel-analyzer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
compact_str = "0.8.0"
cssparser = "0.34.0"
futures = "0.3.31"
glass-easel-template-compiler = "0.11.0"
itertools = "0.13.0"
log = "0.4.22"
lsp-server = "0.7.7"
lsp-types = "~0.95.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["fs", "macros", "rt", "sync", "time"] }
tokio-stream = { version = "0.1.16", features = ["fs"] }
toml = "0.8.19"

[patch.crates-io]
glass-easel-template-compiler = { path = "../glass-easel/glass-easel-template-compiler" }
